# native-bevy-with-tauri-hud-demo

./: Cargo.toml  README.md
bevy/: Cargo.toml
bevy/src/: main.rs
res/: index.html
tauri/: Cargo.toml  Tauri.toml
tauri/src/: main.rs
