[package]
name = "_tauri"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "^1.5", features = ["config-toml"] }

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

tauri = { version = "^1.6", features = ["shell-open", "window-all"] }
window-shadows = "^0.2"
# Specific version to avoid conflicts with tauri
raw-window-handle = { version = "0.5" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
